unpackaged/main/default/objects/Pricing_Definition__c/Pricing_Definition__c.object-meta.xml
<CustomObject>
    <label>Pricing Definition</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>