unpackaged/main/default/objects/Pricing_Definition__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate Pricing Definitions that are currently active for quick reporting and aggregating.</description>
    <inlineHelpText>This field will indicate Pricing Definitions that are currently active for quick reporting and aggregating.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>