unpackaged/main/default/objects/Pricing_Definition__c/fields/Broker_Account__c.field-meta.xml
<CustomField>
    <fullName>Broker_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pricing Definitions</relationshipLabel>
    <relationshipName>Pricing_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>