unpackaged/main/default/objects/Pricing_Definition__c/fields/Calculator_Max_Point_Method__c.field-meta.xml
<CustomField>
    <fullName>Calculator_Max_Point_Method__c</fullName>
    <label>Calculator Max Point Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Cumulative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>