unpackaged/main/default/objects/Pricing_Definition__c/fields/Eligible_for_Retention_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Retention_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Retention Pricing Eligibility referenced in Override Retention Pricing Request flow (PD-1719)</description>
    <inlineHelpText>Retention Pricing Eligibility</inlineHelpText>
    <label>Eligible for Retention Pricing</label>
    <type>Checkbox</type>
</CustomField>