unpackaged/main/default/objects/Pricing_Definition__c/fields/Lender_Account__c.field-meta.xml
<CustomField>
    <fullName>Lender_Account__c</fullName>
    <label>Lender Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>