unpackaged/main/default/objects/Pricing_Definition__c/fields/Method_Value__c.field-meta.xml
<CustomField>
    <fullName>Method_Value__c</fullName>
    <label>Method Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>